--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -1,75 +1,12 @@
-.message{
-    border:1px solid black;
-    height:50px;
-    background-color:white;
-    padding:4px;
-    
-    margin:3px;
-    border-radius:5px;
-    
-    -webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.4); 
-    -moz-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.4); 
-    
-
-    
-    white-space: nowrap;
-    overflow: hidden;
-    
-    cursor: pointer; cursor: hand;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: moz-none;
-    -ms-user-select: none;
-    user-select: none;
-    
-}
-
-.selectedMessage{
-    background-color:rgba(200,200,200, 1.0);
-}
-
-
-@-webkit-keyframes glow {
-	0%      {opacity: 0.1;}
-	50%         {opacity: 1;}
-	100%       {opacity: 0.1;}
-}
-
-.draggedMessage{
--webkit-animation-name:             glow;
-    -webkit-animation-duration:         1.1s;
-    -webkit-animation-iteration-count:  infinite;
-    -webkit-animation-timing-function:	ease-in-out;
-    
-
-    border:1px dashed black;
-    -webkit-box-shadow: inset 0px 0px 30px rgba(255, 255, 255, 0.4); 
-    -moz-box-shadow: inset 0px 0px 30px rgba(255, 255, 255, 0.4); 
-    background-color:rgba(200,200,200, 1.0);
-}
-
-
-.messageElement {
-    font-size:50%;
-    line-height:-50%
-    padding:0px;
-    margin:0px;
-    border:0px;
-}
-
-.message:first-child{
-    border-top: 1px solid black;
-}
-
-
 #controlPanel{
     float:left;
     width:30vw;
 }
 
 #postLink{
-    /*height:4vh;*/
+    border-bottom:1px solid black;
+    border-right:1px solid black;
+    -webkit-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4); 
 }
 
 #postBox{
@@ -80,9 +17,12 @@
     
     margin-left:9px;
     margin-right:9px;
-    margin-top:2px;
+    margin-top:5px;
+    margin-bottom:5px;
     resize: none;
-        
+    
+    text-align:center;
+    vertical-align:middle;
 }
 
 #page{
