--- a/webClient/css/items.css
+++ b/webClient/css/items.css
@@ -32,19 +32,19 @@
 	0%      {
                 -webkit-box-shadow: inset 0px 0px 0px rgba(0, 0, 0, 0); 
                 -moz-box-shadow: inset 0px 0px 0px rgba(0, 0, 0, 0); 
-                border-radius:0px;
+                /*border-radius:0px;*/
             }
             
 	50%         {
                 -webkit-box-shadow: inset 0px 0px 75px rgba(255, 255, 255, 1); 
                 -moz-box-shadow: inset 0px 0px 75px rgba(255, 255, 255, 1);
-                border-radius:50%;
+                /*border-radius:50%;*/
             }
     
 	100%       {
                 -webkit-box-shadow: inset 0px 0px 0px rgba(0, 0, 0, 0); 
                 -moz-box-shadow: inset 0px 0px 0px rgba(0, 0, 0, 0); 
-                border-radius:0px;
+                /*border-radius:0px;*/
             }
 }
 
@@ -56,8 +56,9 @@
     
     border:1px dashed black;
     background-color:rgba(200,200,200, 1.0);
-}
 
+    
+}
 
 
 
