Multiple lists are working. Ish
We have two fatal bugs still: After a long time away, lists may simply
break.
Spamming the server can occasionally break it. I believe this is due to
poor string sanatation.

--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -49,4 +49,10 @@ body{
     background-size:150px 150px;
 }
 
+#pageName {
+    width:90%;
+    margin-left:5%;
+    text-align: center;
+    background-color: lightgrey;
+}
 
