--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -1,17 +1,29 @@
 #controlPanel{
     float:left;
-    width:30vw;
+    width:300px;
+    height:100%;
+    
 }
 
 #postLink{
     border-bottom:1px solid black;
     border-right:1px solid black;
-    -webkit-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4); 
+    -webkit-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4);
+    height:75px;
 }
 
-#postBox{
+#page{
+    overflow-y: scroll;
+    overflow-x:hidden;
+    
+    position:absolute;
+    top:75px;
+    bottom:30px;
+    width:300px;
+}
+
+#postBox{ 
     width:90%;
-    height:100%;
     border:1px dashed black;
     border-radius:5px;
     
@@ -25,16 +37,14 @@
     vertical-align:middle;
 }
 
-#page{
-    height: 91vh;
-    overflow-y: scroll;
-    overflow-x:hidden;
-}
+
 
 #preview{
     float:left;
-    width:70vw;
-    height:100vh;
+    position: absolute;
+    right:0px;
+    left:300px;
+    height:99.65%;
 }
 
 #previewImage{
