--- a/webClient/css/options.css
+++ b/webClient/css/options.css
@@ -1,7 +1,7 @@
 .expandedOption{
     display:none;
     position:absolute;
-    bottom:5vh;
+    bottom:30px;
     left:0px;
     background-color:white;
     width:350px;
@@ -21,10 +21,15 @@
     display:inline;
 }
 
+.option:hover {
+    background-color: rgb(180, 216, 231);
+}
+
 .option{
+    position:relative;
     background-color:white;
-    width:32%;
-    height:5vh;
+    width:32.8%;
+    height:100%;
     float:left;
     display:block;
     border-left:1px solid black;
@@ -41,18 +46,16 @@
     -ms-user-select: none;
     user-select: none;
 }
-.option:first-child{
-    /*border-top-left-radius:10px;
-    border-bottom-left-radius:10px;*/
-}
+
 #showMoreBtn{
-    /*border-top-right-radius:10px;
-    border-bottom-right-radius:10px;*/
     border-right:1px solid black;
 }
 
 #optionsBar{
-    height: 5vh;
+    position:absolute;
+    bottom:2px;
+    width:300px;
+    height:30px
 }
 
 #radius {
