Nested lists "work", but still lack many usability features
see "notes 3" for a full list of changes.

--- a/webClient/css/options.css
+++ b/webClient/css/options.css
@@ -23,13 +23,13 @@
 }
 
 .option:hover {
-    background-color: rgb(180, 216, 231);
+    background-color: #f1f1ff;
     border-top:1px solid black;
     border-right:1px solid black;
     margin-left:-1px;
     
-    margin-top:-10px;
-    border-bottom:15px solid black;
+    /*margin-top:-10px;
+    border-bottom:15px solid black;*/
     z-index:10;
 }
 
