--- a/webClient/css/items.css
+++ b/webClient/css/items.css
@@ -22,7 +22,7 @@
 }
 
 .selectedMessage{
-    border-left:5px solid grey;
+   background-color:#f1f1ff;
 }
 
 
@@ -46,8 +46,7 @@
     -webkit-animation-iteration-count:  infinite;
     -webkit-animation-timing-function:	ease-in-out;
     background-color:#ccc;*/
-    
-    border-left:5px solid grey;
+    background-color:#f1f1ff;
 
     
 }
@@ -81,3 +80,23 @@
     padding-top:20px;
 }
 
+.listMessageOpen{
+    
+    height:auto;
+}
+
+.listMessageClosed{
+}
+
+/*-webkit-animation-name:             grow;
+    -webkit-animation-duration:         1s;
+    @-webkit-keyframes grow {
+    0%      {
+                height:39px;
+            }
+            
+    100%    {
+                height:160px;
+            }
+}*/
+    
