--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -5,46 +5,24 @@
     
 }
 
-#postLink{
-    border-bottom:1px solid black;
-    border-right:1px solid black;
-    -webkit-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4);
-    height:75px;
-}
-
 #page{
     overflow-y: scroll;
     overflow-x:hidden;
     
     position:absolute;
-    top:75px;
+    top:40px;
     bottom:30px;
     width:300px;
+
+    background-color:lightgrey;
 }
-
-#postBox{ 
-    width:90%;
-    border:1px dashed black;
-    border-radius:3px;
-    
-    margin-left:9px;
-    margin-right:9px;
-    margin-top:5px;
-    margin-bottom:5px;
-    resize: none;
-    
-    text-align:center;
-    vertical-align:middle;
-}
-
-
 
 #preview{
     float:left;
     position: absolute;
     right:0px;
     left:300px;
-    height:99.65%;
+    height:95vh;
 }
 
 #previewImage{
@@ -60,9 +38,11 @@ body{
     background-size:150px 150px;
 }
 
-#pageName {
-    width:90%;
-    margin-left:5%;
-    text-align: center;
-    background-color: lightgrey;
+
+
+#pageName{
+    height:3vh;
+    width:99.7%;
+    border:1px solid black;
+    margin-bottom:1px;
 }
