--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -10,7 +10,7 @@
     overflow-x:hidden;
     
     position:absolute;
-    top:40px;
+    top:33px;
     bottom:30px;
     width:300px;
 
@@ -41,8 +41,18 @@ body{
 
 
 #pageName{
-    height:3vh;
+    height:29px;
+    width:98%;
+    border:0px;
+    padding-left:10px;
+    margin:0px;
+    border-radius:5px;
+}
+#pageNameBox{
+    height:31px;
     width:99.7%;
     border:1px solid black;
     margin-bottom:1px;
+    padding-left:1px;
+    background-color:black;
 }
