--- a/webClient/css/newArea.css
+++ b/webClient/css/newArea.css
@@ -1,6 +1,7 @@
 /*The area above the current list*/
 #postLink{
-    height:40px;
+    /*height:40px;*/
+    height:30px;
 }
 
 /*The button to make a new list*/
@@ -9,12 +10,13 @@
     width:20%;
     height:100%;
     background-color:blue;
+
 }
 
 /*the box you can type a custom link into to post it*/
 #postBox{ 
     float:left;
-    width:80%;
+    width:100%;
     height:100%;
     
     resize: none;
@@ -23,6 +25,9 @@
     vertical-align:middle;
 
     padding:0px;
+    padding-bottom:1px;
     margin:0px;
-    border:0px;
+    border-left:1px solid black;
+    border-top:1px solid black;
+    border-bottom:1px solid black;
 }
