--- a/webClient/css/options.css
+++ b/webClient/css/options.css
@@ -29,7 +29,7 @@
 .option{
     position:relative;
     background-color:white;
-    width:48%;
+    width:100%;
     height:100%;
     float:left;
     display:block;
@@ -44,6 +44,7 @@
     -moz-user-select: moz-none;
     -ms-user-select: none;
     user-select: none;
+    border-right:1px solid black;
 }
 
 #showMoreBtn{
