two things left
change "shared windows" title to name of page.
change the background to random matching above and left.

--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -56,3 +56,12 @@ body{
     padding-left:1px;
     background-color:black;
 }
+
+
+
+.invalidName{
+    background-color:rgba(255,100,0,0.5);
+}
+.validName{
+    background-color:rgba(0,255,0,0.5)
+}
