--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -22,7 +22,7 @@
     position: absolute;
     right:0px;
     left:300px;
-    height:95vh;
+    height:96.6vh;
 }
 
 #previewImage{
@@ -41,12 +41,14 @@ body{
 
 
 #pageName{
-    height:29px;
-    width:98%;
+    height:27px;
+    width:99%;
     border:0px;
     padding-left:10px;
-    margin:0px;
     border-radius:5px;
+    margin:0 auto;
+    display: table;
+    margin-top:1px;
 }
 #pageNameBox{
     height:31px;
@@ -55,6 +57,7 @@ body{
     margin-bottom:1px;
     padding-left:1px;
     background-color:black;
+
 }
 
 
