--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -1,7 +1,7 @@
 #controlPanel{
     float:left;
     width:300px;
-    height:100%;
+    height:10%;
     
 }
 
@@ -9,10 +9,9 @@
     overflow-y: scroll;
     overflow-x:hidden;
     
-    position:absolute;
     top:33px;
     bottom:30px;
-    width:300px;
+    width:100%;
 
     background-color:lightgrey;
 }
@@ -21,8 +20,9 @@
     float:left;
     position: absolute;
     right:0px;
-    left:300px;
+    left:310px;
     height:96.6vh;
+    z-index:-5;
 }
 
 #previewImage{
@@ -52,7 +52,7 @@ body{
 }
 #pageNameBox{
     height:31px;
-    width:99.7%;
+    width:100%;
     border:1px solid black;
     margin-bottom:1px;
     padding-left:1px;
@@ -67,4 +67,11 @@ body{
 }
 .validName{
     background-color:rgba(0,255,0,0.5)
+}
+
+.handle{
+    float:left;
+    height:96vh;
+    width:10px;
+    background-color:lightgrey;
 }
