--- a/webClient/css/options.css
+++ b/webClient/css/options.css
@@ -17,23 +17,13 @@
     z-index:100;
 }
 
-/*
-.expandedOption:hover {
-    display:inline;
-}
-.option:hover  + .expandedOption{
-    display:inline;
-}
-*/
 .option:hover {
     background-color: #f1f1ff;
 }
 
 .option{
-    position:relative;
     background-color:white;
-    left:0px;
-    right:0px;
+    width:100%;
     height:100%;
     float:left;
     display:block;
@@ -56,14 +46,12 @@
 }
 
 #optionsBar{
-    position:absolute;
+    position:relative;
     bottom:2px;
-    height:30px
+    height:30px;
+    width:100%;
 }
 
-#radius {
-    width:30px;
-}
 
 h2{
     font-size:1.1em;
