--- a/webClient/css/items.css
+++ b/webClient/css/items.css
@@ -1,9 +1,12 @@
 .message{
-    border-top:1px solid lightgrey;
+    border-top:1px solid rgba(0,0,0,0);
     margin:0px;
     height:30px;
     /*background-color:white;*/
     padding:2px;
+
+    padding-left:7px;
+    padding-right:7px;
         
     white-space: nowrap;
     overflow: hidden;
@@ -49,6 +52,9 @@
 .previewIcon{
     width:20px;
     height:20px;
+
+    padding-left:5px;
+    padding-top:5px;
 }
 
 .closeBtn{
