--- a/webClient/css/items.css
+++ b/webClient/css/items.css
@@ -29,6 +29,11 @@
 
 .postTitle {}
 
+.postTextBox {
+    position:relative;
+    max-width:75%;
+    overflow:hidden;
+}
 
 .nestedPages{
     clear:both;
@@ -55,6 +60,11 @@
 
     padding-left:5px;
     padding-top:5px;
+}
+
+.iconBox{
+    float:left;
+    width:33px;
 }
 
 .closeBtn{
