--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -20,8 +20,8 @@
     float:left;
     position: absolute;
     right:0px;
-    left:360px;
-    height:96.6vh;
+    left:353px;
+    height:100vh;
 }
 
 #previewImage{
@@ -70,8 +70,20 @@ body{
 
 .handle{
     float:left;
-    height:96vh;
-    width:10px;
+    height:100vh;
+    width:3px;
     background-color:lightgrey;
+    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.5);
     cursor:w-resize;
+}
+
+
+
+.noHighlight {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
