--- a/webClient/css/newArea.css
+++ b/webClient/css/newArea.css
@@ -1,6 +1,5 @@
 /*The area above the current list*/
 #postLink{
-    /*height:40px;*/
     height:40px;
 }
 
@@ -13,24 +12,29 @@
 
 }
 
-/*the box you can type a custom link into to post it*/
-#postBox{ 
-    float:left;
-    width:100%;
-    height:100%;
+#postBox{
+    height:27px;
+    width:95%;
+    border:0px;
+    padding-left:10px;
+    border-radius:25px;
+    margin:0 auto;
+    display: table;
+    margin-top:1px;
+
+    margin-top:2px;
     
-    resize: none;
-    
-    text-align:center;
     vertical-align:middle;
 
-    padding:0px;
-    padding-bottom:1px;
-    margin:0px;
-    border-left:1px solid black;
-    border-top:1px solid black;
-    border-bottom:1px solid black;
 
     overflow:hidden;
+}
+
+#pageNameBox{
+    height:31px;
+    width:100%;
+    border:1px solid black;
+    margin:1px;
+    background-color:black;
 
 }
