--- a/webClient/css/items.css
+++ b/webClient/css/items.css
@@ -24,13 +24,22 @@
 .dragHandle{
     float:left;
     cursor:move;
-    background-color:rgba(50,50,50,0.8);
+
+    
+
     height:100%;
-    width:15px;
+    width:16px;
 
-    border-right:1px solid grey;
-    padding-right:-1px;
+    /*border-right:1px solid grey;
+    padding-right:-1px;*/
 
+}
+
+.message:hover .dragHandle{
+    /*background-color:red;*/
+    background-image: url("images/grip.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 
