--- a/webClient/css/items.css
+++ b/webClient/css/items.css
@@ -29,17 +29,16 @@
 
     height:100%;
     width:16px;
+    width:32px;
 
-    /*border-right:1px solid grey;
-    padding-right:-1px;*/
+
 
 }
 
 .message:hover .dragHandle{
-    /*background-color:red;*/
     background-image: url("images/grip.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background-repeat: repeat;
+    background-size: 50% 100%;
 }
 
 
@@ -81,6 +80,9 @@
 
     padding-left:5px;
     padding-top:5px;
+
+    /*margin-left:-16px;*/
+    float:left;
 }
 
 .iconBox{
