--- a/webClient/css/newArea.css
+++ b/webClient/css/newArea.css
@@ -14,17 +14,17 @@
 
 #postBox{
     height:27px;
-    width:95%;
-    border:0px;
-    padding-left:10px;
-    border-radius:25px;
-    margin:0 auto;
-    display: table;
-    margin-top:1px;
+    width: calc(90% - 35px);
 
+    border:0px;
+    border-radius:25px;
+
+    padding-left:10px;
+    padding-right:10px;
+
+
+    margin-left:4%;
     margin-top:2px;
-    
-    vertical-align:middle;
 
 
     overflow:hidden;
@@ -33,8 +33,12 @@
 #pageNameBox{
     height:31px;
     width:100%;
-    border:1px solid black;
+    
     margin:1px;
     background-color:black;
+
+    box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.5);
+
+    -webkit-align-self: flex-start;
 
 }
