--- a/webClient/css/options.css
+++ b/webClient/css/options.css
@@ -3,17 +3,17 @@
 }
 
 #optionsBar{
-    bottom:2px;
-    height:200px;
-    width:100%;
+    min-height:200px;
+    /*min-width:150px;
+    z-index:-5;*/
 
     background-color:white;
-    float:left;
-    display:block;
-    border-top:1px solid black;
-    border-right:1px solid black;
+    
 
-    resize: vertical;
+    box-shadow: 0px -2px 1px 1px rgba(0, 0, 0, 0.5);
+
+    /*-webkit-align-self: flex-end;*/
+
 }
 
 
