--- a/webClient/css/items.css
+++ b/webClient/css/items.css
@@ -40,6 +40,12 @@
     background-repeat: repeat;
     background-size: 50% 100%;
 }
+.touchHandle{
+    background-image: url("images/grip.png");
+    background-repeat: repeat;
+    background-size: 50% 100%;
+}
+
 
 
 .postURL {
