--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -25,9 +25,6 @@
 #preview{
     width:100%;
     height:100%;
-
-    overflow-y: scroll;
-    overflow-x: scroll;
 }
 
 #previewPane{
@@ -35,12 +32,10 @@
     position:absolute;
     right:0px;
     left:353px;
-    100vh:height;
-    
-    overflow-y: scroll;
-    overflow-x: scroll;
+    height: 100vh;
 
-
+    overflow: hidden;
+    -webkit-overflow-scrolling:touch;
 }
 
 
