--- a/webClient/css/newArea.css
+++ b/webClient/css/newArea.css
@@ -32,7 +32,7 @@
 
 #pageNameBox{
     height:31px;
-    width:100%;
+    width:calc(100% - 32px);
     
     margin:1px;
     background-color:black;
