--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -1,9 +1,10 @@
+/*The column along the whole left of the page.*/
 #controlPanel{
     float:left;
     width:350px;
     height:100vh;
 
-    display: -webkit-flex;
+    display: -webkit-flex; /*Its a flex box! */ 
     display: -moz-flex;
     display: -ms-flex;
 
@@ -13,7 +14,7 @@
     
 }
 
-#page{
+#page{ /* The part of the controlPanel where the pages are listed. */
     overflow-y: scroll;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch
@@ -22,24 +23,24 @@
     background-color:lightgrey;
 }
 
-#preview{
+#preview{ /* The iframe on the right */
     width:100%;
     height:100%;
 }
 
-#previewPane{
+#previewPane{ /* A box around the iframe on the right */
     float:left;
-    position:absolute;
+    position:absolute; /* I did have to abs position it. I should have used flex boxes, in retrospect. */
     right:0px;
     left:353px;
     height: 100vh;
 
     overflow: hidden;
-    -webkit-overflow-scrolling:touch;
+    -webkit-overflow-scrolling:touch; /* May help with the iphone, may not. Certiantly doesn't hurt. */
 }
 
 
-body{
+body{ /*Sets the background. Couldn't get the font to set, I think.*/
     font-family: sans-serif;
     overflow:hidden;
     background-color: #FDFFE7;
@@ -48,14 +49,14 @@ body{
 }
 
 
-.invalidName{
+.invalidName{ /* Changes the color to tell the user if the list name they have entered is valid or not.*/
     background-color:rgba(255,100,0,0.5);
 }
 .validName{
     background-color:rgba(0,255,0,0.5)
 }
 
-.handle{
+.handle{ /*The hand to drag the width of the left/right divide*/
     float:left;
     height:100%;
     width:3px;
@@ -65,7 +66,7 @@ body{
     z-index:100;
 }
 
-.exendedDragHandle{
+.exendedDragHandle{ /* The bigger part of the handle to make it easier to use on a touch screen. */
     background-color:inherit;
     width:32px;
     height:32px;
@@ -78,7 +79,7 @@ body{
     z-index:10;
 }
 
-.activeDrag {
+.activeDrag { /* Toggle to show if the drag handle is in use. Helpful on old, laggy machines. */
     background-color:red;
 }
 
