--- a/webClient/css/newArea.css
+++ b/webClient/css/newArea.css
@@ -3,32 +3,68 @@
     height:40px;
 }
 
-/*The button to make a new list*/
-#newList{
+
+
+#postBox{ /* The box you type the page name into*/
     float:left;
-    width:20%;
-    height:100%;
-    background-color:blue;
-
-}
-
-#postBox{ /* The box you type the page name into*//*
     height:27px;
-    width: calc(90% - 35px);
+    width: calc(100% - 100px);
 
     border:0px;
-    border-radius:25px;
+    border-radius:5px;
 
-    padding-left:10px;
+    padding-left:5px;
     padding-right:10px;
 
 
-    margin-left:4%;
     margin-top:2px;
+    margin-left:2px;
 
 
     overflow:hidden;
-}*/
+}
+
+/*http://www.shauninman.com/archive/2007/09/10/styling_file_inputs_with_css_and_the_dom*/
+label.cabinet
+{
+    width: 86px;
+    height: 21px;
+    display: block;
+    overflow: hidden;
+    cursor: pointer;
+
+    background-image: url("images/upload.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+    border:1px solid grey;
+    padding:3px;
+    border-radius:3px;
+    border-radius:5px;
+
+    margin:0 auto;
+    margin-top:1px;
+
+
+}
+label.cabinet:active{
+    box-shadow: inset 0px 0px 100px #001040 !important;
+}
+label.cabinet:hover{
+    box-shadow: inset 0px 0px 3px #001040;
+}
+
+label.cabinet input[type="file"]
+{
+    position: relative;
+    height: 100%;
+    width: auto;
+    opacity: 0;
+    -moz-opacity: 0;
+    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+}
+
+
 
 #pageNameBox{/*Box around the box you post new items from*/
     height:31px;
