--- a/webClient/css/main.css
+++ b/webClient/css/main.css
@@ -10,7 +10,6 @@
 
     -webkit-flex-flow: column;
     -webkit-justify-content: flex-start;
-    /*-webkit-align-content: space-around;*/
     
 }
 
@@ -44,21 +43,8 @@ body{ /*Sets the background. Couldn't get the font to set, I think.*/
     font-family: Georgia, sans-serif !important;
     font-size:15px !important;
     overflow:hidden;
-}
-#backgroundImage{
-    position:absolute;
-    left:0;
-    right:0;
-    top:0;
-    bottom:0;
-    z-index:-5000;
-    width:100%;
-    height:100%;
-    background-image: url(bkgs/sandpaper.jpg); /*url(bkgs/sandpaper.jpg);*/
-    -webkit-filter:  blur(1px);
-    background-size:150px 150px;
-    
-
+    background-color:white;
+    /*background-image: url(bkgs/sandpaper.jpg);*/
 }
 
 .invalidName{ /* Changes the color to tell the user if the list name they have entered is valid or not.*/
